fix: Se resuelven issue de dark mode

--- a/src/components/switch-dark-mode.css
+++ b/src/components/switch-dark-mode.css
@@ -8,7 +8,7 @@
   display: none;
 }
 .checkbox:checked ~ .switch:before {
-  transform: translateX(0);
+  transform: translateX(40px);
 }
 .switch {
   /* border: 1px solid red; */
@@ -29,7 +29,6 @@
   height: 30px;
   background: var(--switchSpinner);
   border-radius: 50%;
-  transform: translateX(40px);
   transition: 0.3s;
   will-change: transform;
 }
